<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:layout_marginTop="3dp">
        <android.widget.Button
            android:id="@+id/open_navigation"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/menu"
            android:backgroundTint="?attr/colorSecondary"

            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <android.widget.Button
            android:id="@+id/close_navigation"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/close"
            android:backgroundTint="?attr/colorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/app_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:gravity="center"
            android:fontFamily="@font/code"
            android:textSize="23sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ScrollView
            android:id="@+id/nav_view"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:fillViewport="true">
            <com.google.android.material.navigationrail.NavigationRailView
                android:id="@+id/navigation"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                app:menu="@menu/navigation_bar"
                app:labelVisibilityMode="labeled" />
        </ScrollView>
        <!--여기부터 코딩-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:fillViewport="true">
            <LinearLayout
                android:id="@+id/set_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/login"
                    android:fontFamily="@font/simple"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/profile"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/profile"
                    android:fontFamily="@font/simple"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/account_set"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/account_set"
                    android:fontFamily="@font/simple"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/my_post"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/my_post"
                    android:fontFamily="@font/simple"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/notify"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/notify"
                    android:fontFamily="@font/simple"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/theme"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/theme"
                    android:fontFamily="@font/simple"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/help"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/help"
                    android:fontFamily="@font/simple"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/update"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/update"
                    android:fontFamily="@font/simple"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/logout"
                    android:fontFamily="@font/simple"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</LinearLayout>